jobs_nogpu/S12.10.test4_parse_2019-11-11_23-56-04
[33mWARNING:[0m seccomp requested but not enabled, seccomp library is missing or too old
  File "analysis/parse.py", line 278
    getAndSaveRandomParses(DAT, Nperm=1000):
                                           ^
SyntaxError: invalid syntax
